--- a/index.html
+++ b/index.html
@@ -11,6 +11,56 @@
     <title>Responsive camping website</title>
 </head>
 <body>
-    
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo">
+                <img src="assets/img/logo.svg" alt="logo">
+            </a>
+            
+            <div class="nav__menu" id="nav__menu">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Home</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Pricing</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Events</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">Contact</a>
+                    </li>
+                </ul>
+
+                <div class="nav__buttons">
+                    <a href="#" class="nav__button-link">Login</a>
+                    <a href="#" class="nav__button-ghost">Get Started</a>
+                </div>
+
+                <!-- close button  -->
+                <div class="nav__close" id="nav__close">
+                    <i class="ri-close-line"></i>
+                </div>
+            </div>
+
+            <!-- toggle button -->
+            <div class="nav__toggle" id="nav__toggle">
+                <i class="ri-menu-line"></i>
+            </div>
+        </nav>
+    </header>
+
+    <main class="main">
+        <section class="home">
+        </section>
+    </main>
+
+    <script src=""></script>
+
+    <script src="assets/js/"></script>
 </body>
 </html>
