--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="assets/img/logo.svg" alt="logo">
             </a>
             
-            <div class="nav__menu" id="nav__menu">
+            <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
                         <a href="#" class="nav__link">Home</a>
@@ -42,13 +42,13 @@
                 </div>
 
                 <!-- close button  -->
-                <div class="nav__close" id="nav__close">
+                <div class="nav__close" id="nav-close">
                     <i class="ri-close-line"></i>
                 </div>
             </div>
 
             <!-- toggle button -->
-            <div class="nav__toggle" id="nav__toggle">
+            <div class="nav__toggle" id="nav-toggle">
                 <i class="ri-menu-line"></i>
             </div>
         </nav>
@@ -56,11 +56,41 @@
 
     <main class="main">
         <section class="home">
+            <div class="home__container container">
+                <div class="home_content">
+                    <div class="home__data">
+                        <h3 class="home__subtitle">
+                            A LIFETIME EXPERIENCE
+                        </h3>
+
+                        <h1 class="home_title">
+                            Camping Events <br>
+                            To Remember
+                        </h1>
+
+                        <p class="home__description">
+                            Camp anywhere anytime without hasstle and enjoy.
+                        </p>
+
+                        <a href="#" class="home__button">
+                            Explore Locations
+                        </a>
+                    </div>
+                    <img src="assets/img/bird-1.svg" alt="" class="home__bird-1">
+                    <img src="assets/img/bird-2.svg" alt="" class="home__bird-2">
+                </div>
+                <div class="home__images">
+                    <img src="assets/img/img-4.svg" alt="" class="home__img-4">
+                    <img src="assets/img/img-3.svg" alt="" class="home__img-3">
+                    <img src="assets/img/img-2.svg" alt="" class="home__img-2">
+                    <img src="assets/img/img-1.svg" alt="" class="home__img-1">
+                </div>
+            </div>
         </section>
     </main>
 
     <script src=""></script>
 
-    <script src="assets/js/"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
